force-app/main/default/objects/Welcome_Overlay_Config__mdt/Welcome_Overlay_Config__mdt.object-meta.xml
<CustomObject>
    <description>Manage site url and overlay background</description>
    <label>Welcome Overlay Config</label>
    <pluralLabel>Welcome Overlay Configs</pluralLabel>
</CustomObject>