force-app/main/default/objects/Welcome_Overlay_Config__mdt/fields/Block_Page__c.field-meta.xml
<CustomField>
    <fullName>Block_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Page</label>
    <type>Checkbox</type>
</CustomField>