force-app/main/default/objects/Welcome_Overlay_Config__mdt/fields/Overlay_BG__c.field-meta.xml
<CustomField>
    <fullName>Overlay_BG__c</fullName>
    <label>Overlay BG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>