force-app/main/default/objects/Welcome_Overlay_Config__mdt/fields/Overlay_URL__c.field-meta.xml
<CustomField>
    <fullName>Overlay_URL__c</fullName>
    <label>Overlay URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>